# bolgenos-ng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
basalt/: CMakeLists.txt  scope_logger.cpp
basalt/include/basalt/: intrusive_list.hpp  scope_logger.hpp  type_traits.hpp
boot/: CMakeLists.txt  Makefile  boot.ld  boot.s  bootloader_mbr.s  debug_parameters.gdb  part_boot.ld  part_boot.s
doc/: CMakeLists.txt  doxygen.conf.in
kernel/: CMakeLists.txt  asm.cpp  backtrace.cpp  boot.sx  bootstrap.h  buddy_allocator.cpp  buddy_allocator.hpp  compiler.cpp  cout.cpp  cxxabi.cpp  error.c  error.cpp  free_list.cpp  free_list.hpp  frequency_divider.cpp  frequency_divider.hpp  init_queue.cpp  irq.c  irq.cpp  kernel.ld  kernel_object.cpp  keyboard.c  keyboard.cpp  main.c  main.cpp  mallocator.cpp  mallocator.hpp  memory.c  memory.cpp  mmu.c  mmu.cpp  multiboot_header.c  multiboot_header.cpp  multiboot_info.c  multiboot_info.cpp  multiboot_info.hpp  page.cpp  page_allocator.cpp  page_allocator.hpp  pic_8259.c  (+27 more)
kernel/abi/: cxxabi.c  cxxabi.cpp
kernel/alloc/: alloc_base.hpp  page_alloc.cpp  page_alloc.hpp  types.hpp
kernel/arch/x86/: multitasking.cpp
kernel/basalt/: scoped_format_guard.cpp
kernel/config/: CMakeLists.txt  common.cmake  ost.h.in
kernel/devices/: CMakeLists.txt  libdevices.cpp
kernel/devices/include/bolgenos-ng/: device.hpp
kernel/devices/interrupt_controller/: CMakeLists.txt  interrupt_controller.cpp  pic_8259.cpp  pic_8259.hpp
kernel/devices/ps2/src/: CMakeLists.txt  common.cpp  controller.cpp  line.cpp  ps2_keyboard.cpp  ps2_keyboard.hpp  ps2_keyboard_sm.cpp  ps2_keyboard_sm.hpp
kernel/devices/serial/: CMakeLists.txt  serial_port.cpp
kernel/devices/serial/src/: io_ports.cpp  lcr.cpp  lsr.cpp  serial_port.cpp
kernel/devices/src/: frequency_divider.cpp  keyboard.cpp  pit.cpp  vga_console.cpp
kernel/devices/vga/: text_console.cpp
kernel/kobj/: CMakeLists.txt
kernel/kobj/src/: kernel_object.cpp  multiboot_info.cpp
kernel/lib/: ostream.cpp  snprintf.c  snprintf.cpp  streambuf.cpp  streambuf.hpp  string.cpp  vga_buf.cpp  vga_buf.hpp  vga_log_buf.cpp  vga_log_buf.hpp
kernel/libkernelcxx/: CMakeLists.txt  ios_base.cpp  new.cpp  ostream.cpp
kernel/libkernelcxx/include/: algorithm.hpp  array.hpp  atomic.hpp  bitarray.hpp  concepts.hpp  cstddef.hpp  cstdint.hpp  cstring.hpp  forward_list.hpp  mem_utils.hpp  memory.hpp  new.hpp  optional.hpp  ostream.hpp  static_string.hpp  streambuf.hpp  string.hpp  type_traits.hpp  utility.hpp
kernel/libkernelcxx/include/bolgenos-ng/: printk.h  time.hpp
kernel/libkernelcxx/include/ext/: fixed_size_vector.hpp  intrusive_circular_list.hpp  intrusive_list.hpp  memory.hpp  scoped_format_guard.hpp  snprintf_stream.hpp
kernel/libkernelcxx/src/: backtrace.cpp  cstring.cpp  cxxabi.cpp  error.cpp  new.cpp  ostream.cpp  printk.cpp  snprintf.cpp  streambuf.cpp  string.cpp
kernel/libkernelcxx/src/ext/: scoped_format_guard.cpp  snprintf_stream.cpp
kernel/log/: CMakeLists.txt  log.cpp  loggable.cpp  serial_buf.cpp  serial_buf.hpp  vga_buf.cpp  vga_buf.hpp  vga_log_buf.cpp  vga_log_buf.hpp
kernel/log/include/: log.hpp  log_level.hpp  loggable.hpp  logger.hpp
kernel/log/include/bolgenos-ng/: log.hpp  loggable.hpp
kernel/log/include/log/: composite_buf.hpp  delegating_log_buf.hpp  log.hpp  serial_buf.hpp  simple_stream_buf.hpp  static_serial_log_buf.hpp  vga_log_buf.hpp
kernel/log/src/: base_log_buf.hpp  buf_builder.cpp  buf_builder.hpp  composite_buf.hpp  delegating_log_buf.cpp  delegating_log_buf.hpp  log.cpp  log_buf.cpp  log_buf.hpp  loggable.cpp  logger.cpp  serial_buf.cpp  serial_buf.hpp  simple_stream_buf.cpp  streambufs.cpp  streambufs.hpp  vga_buf.cpp  vga_buf.hpp  vga_log_buf.cpp  vga_log_buf.hpp
kernel/m4/: fill_idt.cpp.m4  idt.cpp.m4  idt_other.cpp  utils.m4
kernel/memory/: CMakeLists.txt  buddy_allocator.cpp  buddy_allocator.hpp  free_list.cpp  free_list.hpp  mallocator.cpp  mallocator.hpp  memory.cpp  memory_region.hpp  page.cpp  page_allocator.cpp  page_allocator.hpp  slab.cpp
kernel/memory/include/bolgenos-ng/: memory.hpp  page.hpp  slab.hpp
kernel/ost/: CMakeLists.txt  assert.cpp  bitarray.cpp  bitarray.hpp  conf.cpp  memory.cpp  memory.hpp  ost.cpp  test_case_base.cpp  test_runner.cpp  type_traits.cpp
kernel/ost/include/bolgenos-ng/: ost.hpp
kernel/ost/src/: bitarray.cpp  memory.cpp  memory.hpp  ost.cpp  type_traits.cpp
kernel/ps2/: common.cpp  ps2_controller.cpp  ps2_keyboard.cpp  ps2_keyboard.hpp  ps2_keyboard_sm.cpp  ps2_keyboard_sm.hpp  ps2_line.cpp
kernel/sched/: CMakeLists.txt  sched.cpp  scheduler.cpp  scheduler.hpp  task.cpp
kernel/sched/include/: sched.hpp
kernel/sched/include/sched/: task.hpp
kernel/src/log/: log.cpp  vga_buf.hpp  vga_log_buf.cpp  vga_log_buf.hpp
kernel/threading/include/: mutex.hpp
kernel/threading/include/threading/: lock.hpp  threading.hpp  with_lock.hpp
kernel/threading/src/: CMakeLists.txt  lock.cpp  mutex.cpp  threading.cpp
kernel/x86/: CMakeLists.txt  multitasking.cpp  scheduler.cpp  tss.cpp
kernel/x86/include/bolgenos-ng/: asm.hpp  irq.hpp
kernel/x86/include/x86/: cpu.hpp  eflags.hpp  (+11 more)
kernel/x86/src/: cpu.cpp  eflags.cpp  gate.cpp  gdt.cpp  idt.cpp  irq.cpp  memory_segment_d.cpp  multitasking.cpp  scheduler.cpp  segments.cpp  simple_hw_scheduler.hpp  task.cpp  traps.cpp  traps.hpp  tss.cpp  tssd.cpp
kstdc++/: CMakeLists.txt  ios_base.cpp  new.cpp  ostream.cpp  snprintf.cpp  streambuf.cpp  string.cpp  vga_buf.cpp  vga_buf.hpp  vga_log_buf.cpp  vga_log_buf.hpp
kstdc++/include/: atomic  cstddef  cstdint  cstring  ios  new  ostream  streambuf  streambuf_backup  type_traits
testing/generic-lists/: CMakeLists.txt  basic_forward_list.hpp  forward_list.hpp  free_list.hpp  generic_list.hpp  memory.hpp  test_basic_forward_list.cpp  test_forward_list.cpp  test_forward_list_iterators.cpp  test_generic_list.cpp
testing/generic-lists/impl/: basic_forward_list.hpp
testing/generic-lists/tests/: basic_forward_list.cpp  forward_list.cpp  forward_list_iterators.cpp  free_list.cpp
tools/: CMakeLists.txt  bochs.conf  gen_part_table.cpp
(+158 files in other folders)
